welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: not found: type boolean
	var vuBiscuit:boolean=false
                      ^Program:6: error: type mismatch;
 found   : Unit
 required: Boolean
	for (nbPas <- 1 to 6) {
                   ^